[#noissue] Add v2 ui configuration